--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.6.1",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
+    "react-native-svg-transformer": "^1.5.2",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-view-shot": "^4.0.3",
