--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,6 +20,7 @@ android {
         applicationId "com.kids"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+
         versionCode 1
         versionName "1.0"
     }
@@ -47,6 +48,9 @@ android {
 
 dependencies {
     implementation("com.facebook.react:react-android")
+    implementation 'com.facebook.fresco:animated-gif:3.1.3'
+    implementation project(':react-native-video')
+
 
     if (!hermesEnabled.toBoolean()) {
         implementation jscFlavor
