--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.6.1",
     "react-native-orientation-locker": "^1.7.0",
+    "react-native-pager-view": "^8.0.0",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
@@ -39,6 +40,7 @@
     "react-native-svg-transformer": "^1.5.2",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.18.0",
     "react-native-view-shot": "^4.0.3",
     "react-native-worklets": "^0.7.1",
     "zustand": "^5.0.9"
