--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-camera-roll/camera-roll": "^7.10.2",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^5.1.1",
     "@react-native-google-signin/google-signin": "^16.1.1",
@@ -20,6 +21,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
+    "lodash": "^4.17.21",
     "lucide-react-native": "^0.562.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
@@ -57,6 +59,7 @@
     "@react-native/metro-config": "0.83.1",
     "@react-native/typescript-config": "0.83.1",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.23",
     "@types/react": "^19.2.0",
     "@types/react-native-linear-gradient": "^2.3.1",
     "@types/react-native-vector-icons": "^6.4.18",
